<resources>
    <string name="app_name">Pizza Builder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_menu_text_home_page">Пицца</string>
    <string name="item_menu_text_pizza_builder_page">Создать</string>
    <string name="item_menu_text_basket_page">Заказы</string>
    <string name="item_menu_text_favorite_page">Избранное</string>
    <string name="item_menu_text_user_page">Профиль</string>
    <string name="text_update_image_user">Обновить фото</string>
    <string name="text_btn_add_product">Добавить пиццу</string>
    <string name="text_create_new_pizza">Создайте новую пиццу</string>
    <string name="hint_name_pizza">Название</string>
    <string name="hint_description_pizza">Описание</string>
    <string name="hint_price_pizza">Цена в руб.</string>
    <string name="btn_text_download_image_pizza">Загрузить фото</string>
    <string name="btn_text_create_pizza">Создать пиццу</string>
    <string name="text_no_image_pizza">Фото не загружено</string>
    <string name="text_download_user_pizza_image">Загруженное фото</string>
    <string name="text_btn_watch_pizza">Посмотреть</string>
    <string name="text_btn_order_pizza">Заказать</string>
    <string name="text_btn_delete_pizza">Удалить</string>
    <string name="text_btn_no_delete_pizza">Отменить</string>
    <string name="text_btn_update_pizza">Изменить</string>
    <string name="text_title_delete_alert_dialog">Вы точно хотите удалить пиццу?</string>
    <string name="text_desc_delete_alert_dialog">Подтвердите ваше решение</string>
    <string name="text_update_pizza">Обновление пиццы</string>
    <string name="btn_text_update_pizza">Обновить</string>
    <string name="text_hint_search">Поиск</string>
    <string name="header_name_app">PizzaBuilder</string>
</resources>