<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_delete_alert_dialog"
            android:textAlignment="center"
            android:textColor="@color/main_color_orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_desc_delete_alert_dialog"
            android:textAlignment="center"
            android:textColor="@color/text_hint_color"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_true_delete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_card_background_delete"
                android:text="@string/text_btn_delete_pizza"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_false_delete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_card_background_no_delete"
                android:text="@string/text_btn_no_delete_pizza"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>