<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_create_pizza_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.owner.fragments.CreatePizzaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_create_new_pizza"
                android:textAllCaps="true"
                android:textColor="@color/main_color_orange"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/error_name_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/et_name_pizza"
                app:layout_constraintStart_toStartOf="@+id/et_name_pizza">

                <ImageView
                    android:id="@+id/icon_error_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/error_icon" />

                <TextView
                    android:id="@+id/text_error_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/text_error_color"
                    tools:text="Ошибка" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_card_background"
                android:hint="@string/hint_name_pizza"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#C8C8C8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_fragment" />

            <LinearLayout
                android:id="@+id/error_description_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/et_description_pizza"
                app:layout_constraintStart_toStartOf="@+id/et_description_pizza">

                <ImageView
                    android:id="@+id/icon_error_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/error_icon" />

                <TextView
                    android:id="@+id/text_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/text_error_color"
                    tools:text="Ошибка" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description_pizza"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_card_background"
                android:gravity="start"
                android:hint="@string/hint_description_pizza"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="#C8C8C8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name_pizza" />

            <LinearLayout
                android:id="@+id/error_price_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/et_price_pizza"
                app:layout_constraintStart_toStartOf="@+id/et_price_pizza">

                <ImageView
                    android:id="@+id/icon_error_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/error_icon" />

                <TextView
                    android:id="@+id/text_error_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/text_error_color"
                    tools:text="Ошибка" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_price_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_card_background"
                android:hint="@string/hint_price_pizza"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#C8C8C8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_description_pizza" />

            <TextView
                android:id="@+id/text_no_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_no_image_pizza"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/btn_download_image_pizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_price_pizza" />

            <TextView
                android:id="@+id/text_image_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_download_user_pizza_image"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_price_pizza" />

            <ImageView
                android:id="@+id/download_image"
                android:layout_width="240dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btn_download_image_pizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_image_download" />

            <LinearLayout
                android:id="@+id/error_download_image_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btn_download_image_pizza"
                app:layout_constraintEnd_toEndOf="@+id/btn_download_image_pizza"
                app:layout_constraintStart_toStartOf="@+id/btn_download_image_pizza">

                <ImageView
                    android:id="@+id/icon_error_download_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/error_icon" />

                <TextView
                    android:id="@+id/text_error_download_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/text_error_color"
                    tools:text="Ошибка" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_download_image_pizza"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_background_main"
                android:text="@string/btn_text_download_image_pizza"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_no_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/btn_card_background"
                android:text="@string/btn_text_create_pizza"
                android:textColor="@color/main_color_orange"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_download_image_pizza" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>